--- a/src/components/event.css
+++ b/src/components/event.css
@@ -39,3 +39,15 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.event-input {
+  width: 100%;
+  border: none;
+  background: none;
+  font-size: inherit;
+  font-family: inherit;
+  color: inherit;
+  padding: 0;
+  margin: 0;
+  outline: none;
+}
