--- a/src/components/task.css
+++ b/src/components/task.css
@@ -75,8 +75,7 @@
   width: 100%;
   min-height: 30px;
   max-height: 600px;
-  overflow: auto;
-  overflow: hidden; /* 移除滚动条 */
+  overflow: visible;
 }
 
 .task {
